--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Create checksums
         run: |
           shasum -a 256 *-${{ github.ref_name }}_*_* >| checksums.txt
-          file *-${{ github.ref_name }}_*_*
+          file *-${{ github.ref_name }}_*_* checksums.txt
 
       - name: Sign checksums
         run: |
